main_app/static/css/recipe-list.css
h4 {
  margin-bottom: 0;
  font-weight: bold;
}

.recipe-list {
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  gap: 2rem;
  padding: 2rem;
  max-width: 1200px;
  margin: 0 auto;
}

.recipe-card {
  display: flex;
  flex-direction: column;
  gap: 0.5rem;
  justify-content: flex-start;
  align-items: center;
  position: relative;
  cursor: pointer;
  width: 250px;
  /* max-height: 450px; */
  /* overflow: hidden; */
  background-color: #f9f9f9;
  border: 1px solid #eee;
  border-radius: 8px;
  padding: 1.5rem;
  text-align: center;
  box-shadow: 0 1px 4px rgba(0, 0, 0, 0.05);
  color: inherit;
  text-decoration: none;
  transition: transform 0.2s ease, box-shadow 0.2s ease;
}

.recipe-card:hover {
  transform: translateY(-5px);
  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
}

.recipe-card:hover {
  transform: scale(1.05);
}

.recipe-thumb {
  width: 100%;
  height: 100%;
  object-fit: cover;
  transition: transform 0.4s ease;
}

.recipe-thumb-container {
  width: 100%;
  height: 200px;
  border-radius: 6px;
  position: relative;
}

.description {
  line-height: 1;
}

.add-icon {
  position: absolute;
  top: 0.25rem;
  right: 0.25rem;
  background-color: transparent;
  border: none;
  /* border-radius: 50%; */
  font-size: 1.2rem;
  cursor: pointer;
  /* padding: 0.25rem 0.4rem; */
  z-index: 10;
}

.collection-dropdown-wrapper {
  position: absolute;
  top: 0;
  right: 0;
}

.collection-dropdown {
  position: absolute;
  top: 1rem;
  right: 0;
  background: transparent;
  padding: 0.5rem;
  border-radius: 6px;

  z-index: 20;
  width: max-content;
}

.hidden {
  display: none;
}

.add-icon i.fa-solid {
  font-size: 1.2rem;
  color: black;
  transition: color 0.3s ease;
}

.add-icon:hover i {
  color: var(--color-sand-yellow);
}

.recipe-card:hover h4 {
  color: var(--color-teal-green);
}

.modal-overlay {
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background-color: rgba(0, 0, 0, 0.4);
  display: flex;
  justify-content: center;
  align-items: center;
  z-index: 1000;
}

.modal-content {
  background-color: white;
  padding: 1rem;
  border-radius: 8px;
  box-shadow: 0 4px 15px rgba(0, 0, 0, 0.2);
  width: 90%;
  max-width: 400px;
  display: flex;
  align-items: center;
  justify-content: center;
}

.modal-content form {
  display: flex;
  flex-direction: column;
  align-items: center;
  width: 100%;
}

.modal-btn {
  background-color: var(--color-teal-green);
  color: var(--color-white);
}

.btn {
  border: none;
}

.modal-buttons {
  margin-top: 1rem;
  display: flex;
  justify-content: center;
  gap: 1rem;
}

.modal-overlay.hidden {
  display: none;
}

.button-container {
  display: flex;
  justify-content: center;
  gap: 1rem;
}

.pagination {
  text-align: center;
  margin-top: 2rem;
  display: flex;
  justify-content: center;
  gap: 1rem;
}

.pagination a {
  padding: 0.5rem 1rem;
  background-color: var(--color-teal-green);
  color: white;
  border-radius: 5px;
  text-decoration: none;
}

.pagination a:hover {
  background-color: var(--color-teal-green-hover);
}

.filter-form {
  display: flex;
  gap: 1rem;
  justify-content: center;
  align-items: center;
  flex-wrap: wrap;
  /* margin-bottom: 1rem; */
}

.filter-form label {
  font-weight: bold;
}

.filter-form select {
  padding: 0.5rem;
  border-radius: 5px;
}

.filter-form input[type="text"] {
  padding: 0.5rem;
  border-radius: 5px;
  border: 1px solid #ccc;
}

.recipe-card .add-icon {
  /* display: none; */
  opacity: 0;
  visibility: hidden;
  transition: opacity 0.3s ease, visibility 0.3s ease;
}

.recipe-card:hover .add-icon {
  /* display: inline-block; */
  opacity: 1;
  visibility: visible;
}

.add-icon.plus-mode {
  /* background-color: var(--color-sand-yellow);
  color: black; */
  color: black;
  transition: transform 0.3s ease;
}

.add-icon.plus-mode:hover {
  color: var(--color-sand-yellow);
  /* transform: scale(1.5); */
}

.author {
  font-size: 0.9rem;
  color: rgb(123, 117, 117);
  font-style: italic;
}

.no-recipes {
  text-align: center;
  margin: 1rem;
}

.no-recipes p,
.no-recipes .btn {
  margin: 1rem;
}

.reset {
  background-color: var(--color-coral-orange);
  color: white;
  text-decoration: none;
  padding: 0.75rem 1.5rem;
  border-radius: 5px;
  font-size: 1rem;
  font-weight: bold;
  transition: background-color 0.3s ease;
  line-height: normal;
}

.reset:hover {
  background-color: #f2c198;
}

@media (max-width: 768px) {
  .recipe-card .add-icon {
    opacity: 1;
    visibility: visible;
  }

  .add-icon {
    padding: 0.5rem;
    font-size: 1.4rem;
  }
}

@media (max-width: 600px) {
  .recipe-card {
    width: 350px;
    max-height: 500px;
  }

  .recipe-thumb-container {
    height: 300px;
  }
}

